--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -110,6 +110,81 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-08">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-8-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 6月8日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/aa3ddc9bff6fda25db17c202e775086f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-8-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 6月8日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、欧洲、美国、加拿大、香港、韩国、新加坡等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 6月7日21.6M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 6月7日21.6M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、韩国、新加坡、加拿大、香港、日本、美国等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-6-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 6月6日22.4M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-6-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 6月6日22.4M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、韩国、新加坡、香港、欧洲、美国、加拿大等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-5-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 6月5日21M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-5-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 6月5日21M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、美国、韩国、加拿大、新加坡、日本、欧洲等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-4-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 6月4日20.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/a621dbd095b5853e39cd840d5e02d439.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-4-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 6月4日20.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、美国、新加坡、加拿大、韩国、日本、香港等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-06-03">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-6-3-node-share.htm" class="xcblog-blog-url">
@@ -185,81 +260,6 @@
                                     这一次的节点更新覆盖了日本、香港、美国、加拿大、韩国、欧洲、新加坡等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-05-29">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-5-29-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 5月29日20.5M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享" src="/uploads/20241222-1/d5724d9f45324a2206331adc0791a09b.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-5-29-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 5月29日20.5M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、新加坡、韩国、美国、香港、日本、欧洲等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-05-28">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-5-28-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 5月28日20.3M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-5-28-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 5月28日20.3M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、韩国、加拿大、新加坡、美国、香港、日本等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-05-27">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-5-27-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 5月27日18.1M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享" src="/uploads/20241222-1/c3c6a54ea49b309f84ab33c220f79ae0.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-5-27-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 5月27日18.1M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、香港、韩国、新加坡、美国、日本、加拿大等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-05-26">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-5-26-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 5月26日19M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/db72c394ca524824fbc01b1e4ee3f240.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-5-26-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 5月26日19M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、欧洲、美国、韩国、香港、日本、加拿大等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-05-25">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-5-25-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 5月25日18.6M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/becabf2a83a60c5b8ca26e178386a903.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-5-25-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 5月25日18.6M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、美国、韩国、香港、加拿大、新加坡、欧洲等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -270,16 +270,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-13-free-v2ray.htm" title="VPN设备 | 5月13日18.9M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享">VPN设备 | 5月13日18.9M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-2-free-node-subscribe-links.htm" title="VPN设备 | 6月2日22.9M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 6月2日22.9M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-9-node-share-links.htm" title="VPN设备 | 5月9日22.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN设备 | 5月9日22.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-5-free-node-subscribe-links.htm" title="VPN设备 | 5月5日18.8M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 5月5日18.8M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-11-free-v2ray.htm" title="VPN设备 | 5月11日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 5月11日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-31-free-node-subscribe-links.htm" title="VPN设备 | 5月31日21.5M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享">VPN设备 | 5月31日21.5M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-14-free-v2ray.htm" title="VPN设备 | 5月14日21.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 5月14日21.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-subscribe-node.htm" title="VPN设备 | 5月22日18.3M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 5月22日18.3M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-26-free-high-speed-nodes.htm" title="VPN设备 | 5月26日19M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 5月26日19M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-7-free-v2ray-subscribe.htm" title="VPN设备 | 5月7日23M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享">VPN设备 | 5月7日23M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-3-free-v2ray.htm" title="VPN设备 | 5月3日19.8M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享">VPN设备 | 5月3日19.8M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-16-free-high-speed-nodes.htm" title="VPN设备 | 5月16日19.7M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 5月16日19.7M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-6-clash-v2ray-ss-ssr.htm" title="VPN设备 | 5月6日19.5M/S|免费VPN/Clash/V2ray/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 5月6日19.5M/S|免费VPN/Clash/V2ray/SSR/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-27-clash-v2ray-ss-ssr.htm" title="VPN设备 | 5月27日18.1M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 5月27日18.1M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-2-free-node-subscribe-links.htm" title="VPN设备 | 6月2日22.9M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 6月2日22.9M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-4-free-node-subscribe.htm" title="VPN设备 | 6月4日20.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 6月4日20.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-6-clash-v2ray-ss-ssr.htm" title="VPN设备 | 6月6日22.4M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 6月6日22.4M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-31-free-node-subscribe-links.htm" title="VPN设备 | 5月31日21.5M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享">VPN设备 | 5月31日21.5M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-24-free-v2ray.htm" title="VPN设备 | 5月24日22.4M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享">VPN设备 | 5月24日22.4M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -291,7 +291,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
